[package]
name = "sheets-diff"
version = "0.1.0"
edition = "2021"

[dependencies]
full = "0.1.0"
google-sheets4 = "5.0.4"
hyper = { version = "0.14", features = ["full", "client", "http2"] }
hyper-rustls = "0.22"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
anyhow = "1.0.86"
env_logger = "0.11.3"
log = "0.4.21"
